--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>dev.prognitio</groupId>
 	<artifactId>vegtaurant</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-beta</version>
 	<name>vegtaurant</name>
 	<description>Vegetarian resturaunt site.</description>
 	<url/>
@@ -53,6 +53,7 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
